--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Calculadora"
+        android:text="CalculadoraTEST"
         android:textSize="25sp"
         android:textColor="@android:color/black"
         android:textStyle="bold"
