--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,103 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@android:color/holo_green_light"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity2"
+    >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Calculadora"
+        android:text="Basic Calculator"
         android:textSize="25sp"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         android:textAlignment="center"
+        android:layout_margin="10dp"
         />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="239dp"
-        android:layout_height="89dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
         app:srcCompat="@drawable/t1" />
+
+    <EditText
+        android:id="@+id/num1"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:background="@android:color/background_light"
+        android:inputType="number"
+        android:hint="Number 1" />
+
+    <EditText
+        android:id="@+id/num2"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@android:color/background_light"
+        android:inputType="number"
+        android:hint="Number 2" />
+
+
+    <RelativeLayout
+
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btn_Add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"
+            android:onClick="onClick" />
+
+        <Button
+            android:id="@+id/btn_Sub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/btn_Add"
+            android:layout_toEndOf="@id/btn_Add"
+            android:onClick="onClick" />
+
+        <Button
+            android:id="@+id/btn_Mult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="x"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/btn_Sub"
+            android:layout_toEndOf="@id/btn_Sub"
+            android:onClick="onClick" />
+
+        <Button
+            android:id="@+id/btn_Div"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="/"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/btn_Mult"
+            android:layout_toEndOf="@id/btn_Mult"
+            android:onClick="onClick" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/resultado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:text="Result"
+        android:textColor="#ffff"
+        android:textSize="20dp"/>
 
 
 </LinearLayout>
